--- a/backup.html
+++ b/backup.html
@@ -15,24 +15,24 @@
   <body>
     <div class="container">
       <div class="searchbox">
-        <input type="text" placeholder="Search City" />
+        <input type="text" placeholder="Search City/Country" />
         <button id="searchbtn"><i class="uil uil-search"></i></button>
       </div>
       <div class="weatherinfo">
         <div class="condition">
           <i class="uil uil-brightness condition-icon"></i>
         </div>
-        <div class="weather-celciusVal">26 °C</div>
-        <div class="cityBox">New York,  United States of America</div>
+        <div class="weather-celciusVal"><!--Dynamically added--></div>
+        <div class="cityBox"><!--Dynamically added--></div>
       </div>
       <div class="humidityandWind">
-        <div class="humidityBox padding1">Humidity: 48%</div>
-        <div class="windSpeedBox padding1">Wind Speed: 10.29Km/hr</div>
+        <div class="humidityBox padding1"><!--Dynamically added--></div>
+        <div class="windSpeedBox padding1"><!--Dynamically added--></div>
       </div>
       <div class="moreInfo">
-        <div class="lastUpdated">Last Updated: 2023-09-26 20:30</div>
-        <div class="longitude">Lat 28.6°</div>
-        <div class="latiitude">Long 77.2°</div>
+        <div class="lastUpdated"><!--Dynamically added--></div>
+        <div class="longitude"><!--Dynamically added--></div>
+        <div class="latiitude"><!--Dynamically added--></div>
       </div>
     </div>
     <script src="script.js"></script>
